# peven

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: publish.yml  release-gate.yml
src/peven/: __init__.py  __main__.py  env.py  executor.py  gateway.py  key.py  marking.py  net.py  place.py  transition.py
src/peven/authoring/: guard.py  join.py
src/peven/worker/: __init__.py  context.py  dealer.py  ipc.py  pool.py  worker.py
tests/: api.py  cli.py  dealer.py  e2e.py  env.py  executor.py  gateway.py  ipc.py  key.py  marking.py  net.py  place.py  pool.py  transition.py  worker.py
tests/authoring/: test_guards.py
