[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peven"
version = "0.3.0"
description = "Python authoring for Peven nets"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Ulysses Sekai Tully Carr" },
]
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.0",
    "pyzmq>=26.0",
]
keywords = [
    "agents",
    "evaluation",
    "llm",
    "petri-net",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.scripts]
peven = "peven.__main__:main"

[project.urls]
Homepage = "https://github.com/jammy-eggs/peven"
Repository = "https://github.com/jammy-eggs/peven"
Issues = "https://github.com/jammy-eggs/peven/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.hatch.build]
exclude = [
    ".claude/",
    ".github/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".serena/",
    ".uv-cache/",
    ".venv/",
    "AGENTS.md",
    "build/",
    "dist/",
    "htmlcov/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/peven"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]
